# rust-bitcoin-indexing-service

./: .env.exmpl  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
app/: Cargo.toml
app/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20251031205932_users.down.sql  20251031205932_users.up.sql
crates/db/src/: lib.rs  models.rs  responses.rs
crates/handling/: Cargo.toml
crates/handling/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/p2p-indexer/: Cargo.toml
crates/p2p-indexer/src/: lib.rs
crates/rpc-indexer/: Cargo.toml
crates/rpc-indexer/src/: lib.rs
