[workspace]
members = [
    "app",             
    "crates/api",      
    "crates/db", "crates/handling", 
    "crates/indexer",       
    "crates/handling",   

]

resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
eyre = "0.6"
dotenv = "0.15"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.17"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
log = "0.4"
crossbeam-channel = "0.5"
bitcoin = { version = "0.29", features = ["serde"] } 
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bitcoin_hashes = "0.12"
hex = "0.4"





