[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]

api = {path = "../crates/api"}
db = {path = "../crates/db"}
models = {path = "../crates/models"}
indexer = {path = "../crates/indexer"}

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
eyre = { workspace = true }
dotenv = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
nakamoto-client = { workspace = true }
bitcoin = { workspace = true }
nakamoto-net-poll = { workspace = true }