[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]

api = {path = "../crates/api"}
db = {path = "../crates/db"}
indexer = {path = "../crates/indexer"}
handling = {path = "../crates/handling"}

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
