[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]

handling = {path = "../handling"}
db = {path = "../db"}
indexer = {path = "../indexer"}

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bitcoin = { workspace = true }
