[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
eyre = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
bcrypt = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
bitcoin_hashes = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
