[package]
name = "handling"
version = "0.1.0"
edition = "2024"

[dependencies]
db = {path = "../db"}

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
eyre = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }