[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]

models = {path = "../models"}
db = {path = "../db"}

alloy = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }
alloy-dyn-abi = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
eyre = { workspace = true }
dotenv = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }


log = { workspace = true }
crossbeam-channel = { workspace = true }

nakamoto-client = { workspace = true }
bitcoin = { workspace = true }
nakamoto-net-poll = { workspace = true }
