[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]

db = {path = "../db"}

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
nakamoto-client = { workspace = true }
bitcoin = { workspace = true }
nakamoto-net-poll = { workspace = true }
