[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
db = {path = "../db"}

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
bitcoin_hashes = { workspace = true }
hex = { workspace = true }
